--- a/ProAppModule3/ArcgisProToolboxPackage.csproj
+++ b/ProAppModule3/ArcgisProToolboxPackage.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{63E68AFA-6999-4A28-9A19-4AC5E5F3AEDF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProAppModule3</RootNamespace>
-    <AssemblyName>ProAppModule3</AssemblyName>
+    <RootNamespace>ArcgisProToolboxPackage</RootNamespace>
+    <AssemblyName>ArcgisProToolboxPackage</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
